# type-lang

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  bnf.ts  build.zig  ebnf-todos.txt  ebnf.txt  notes.txt  playground.ty  test.ts  test.ty  todos.txt
.github/workflows/: cd.yml  ci.yml
ast/: Cargo.toml
ast/src/: lib.rs
bootstrap/: makefile
bootstrap/repr/: integration.c  integration.ty  main.c  makefile
bootstrap/src/: add.ty  lexer.ty  main.c  token.ty
bootstrap/token/: lib.ty
cachectx/: Cargo.toml
cachectx/src/: lib.rs
codelocation/: Cargo.toml
codelocation/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
cranelift/: Cargo.toml  README.md  cbindgen.toml
cranelift/craneliftc/: Cargo.toml
cranelift/craneliftc/src/: lib.rs
cranelift/export/: Cargo.toml
cranelift/export/src/: lib.rs
cranelift/isa/: Cargo.toml
cranelift/isa/src/isle/: clif_lower.isle  clif_opt.isle
cranelift/src/: lib.rs
datatable/: Cargo.toml
datatable/src/: lib.rs
docs/: project.yaml
e2e/: Cargo.toml
e2e/src/: main.rs
fir/: Cargo.toml
fir/src/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
infotable/: Cargo.toml
infotable/src/: lib.rs
installers/windows/: ty-installer.iss  tyvm-installer.iss
installers/windows/TypeLangSolution/: TypeLangSolution.sln
installers/windows/TypeLangSolution/MergeModule1/: MergeModule1.vdproj
installers/windows/TypeLangSolution/TypeLangInstaller/: TypeLangInstaller.vdproj
ir/: Cargo.toml
ir/src/: lib.rs
layout/: Cargo.toml
layout/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
linker/src/: lib.rs
linter/: Cargo.toml
linter/src/: lib.rs
llvm/: .gitignore  debug.sh  download.sh  release.sh
object/: Cargo.toml
object/src/: lib.rs
objmaker/: Cargo.toml
objmaker/src/: lib.rs
oir/: Cargo.toml
oir/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
perror/: Cargo.toml
perror/src/: lib.rs
project/: Cargo.toml
project/src/: lib.rs
repr/: Cargo.toml
repr/src/: lib.rs
scir/: Cargo.toml
scir/src/: lib.rs
scopetable/: Cargo.toml
scopetable/src/: lib.rs
slt/: Cargo.toml
slt/src/: lib.rs
src/: ast.zig  cranelift-bindings.zig  cranelift.zig  lexer.zig  llt.zig  llvm-bindings.zig  llvm.zig  parser.zig  slt.zig  span.zig  strings.zig  tir.zig  token.zig
symtable/: Cargo.toml
symtable/src/: lib.rs
test/: main.ty  test.ty
token/: Cargo.toml
token/src/: lib.rs
ty/: Cargo.toml
ty/src/: main.rs
types/src/: lib.rs
typetable/: Cargo.toml
typetable/src/: lib.rs
tyvm/: Cargo.toml
