[workspace]
members = [
  "token",
  "perror",
  "lexer",
  "parser",
  "symtable",
  "object",
  "objmaker",
  "linker",
  "ast",
  "project",
  "ty",
  "ir",
  "e2e",
  "tyvm",
  "linter",
  "codelocation",
  "types",
  "cachectx",
  "typetable",
  "scopetable",
  "fir",
  "oir",
  "scir",
  "datatable",
  ]
resolver = "2"

