[workspace]
members = [
  "token",
  "perror",
  "lexer",
  "parser",
  "symtable",
  "object",
  "objmaker",
  "linker",
  "ast",
  "project",
  "ty",
  "e2e",
  "tyvm",
  "linter",
  "codelocation",
  "types",
  "typetable",
  "scopetable",
  "fir",
  "oir",
  "scir",
  "datatable",
  "repr",
  "layout",
  ]
resolver = "2"

