[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
linker = { path = "../linker" }
symtable = { path = "../symtable" }
lexer = { path = "../lexer" }
token = { path = "../token" }
parser = { path = "../parser" }
ir = { path = "../ir" }
object = { path = "../object" }
objmaker = { path = "../objmaker" }
linter = { path = "../linter" }
