[package]
name = "fir"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path="../ast" }
oir = { path="../oir" }
symtable = { path="../symtable" }
datatable = { path="../datatable" }
typetable = { path="../typetable" }
scopetable = { path="../scopetable" }
token = { path="../token" }
perror = { path="../perror" }
lexer = { path="../lexer" }
linter = { path="../linter" }
types = { path="../types" }
cranelift-frontend = "0"
cranelift-codegen = "0"
cranelift-module = "0"
