[package]
name = "ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path="../ast" }
symtable = { path="../symtable" }
typetable = { path="../typetable" }
token = { path="../token" }
perror = { path="../perror" }
lexer = { path="../lexer" }
linter = { path="../linter" }
types = { path="../types" }
cranelift-frontend = "0"
cranelift-codegen = "0"
