[package]
name = "linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
types = { path = "../types" }
typetable = { path = "../typetable" }
scopetable = { path = "../scopetable" }
parser = { path = "../parser" }
token = { path = "../token" }
lexer = { path = "../lexer" }
perror = { path = "../perror" }
codelocation = { path = "../codelocation" }
