[package]
name = "objmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
symtable = { path = "../symtable" }
scopetable = { path = "../scopetable" }
typetable = { path = "../typetable" }
lexer = { path = "../lexer" }
linter = { path = "../linter" }
token = { path = "../token" }
parser = { path = "../parser" }
object = { path = "../object" }
scir = { path = "../scir" }
