[package]
name = "cranelift-export"
version = "0.1.0"
edition = "2021"

#[profile.release]
#panic="abort"
#
#[profile.dev]
#panic="abort"

[lib]
name = "craneliftc"
crate-type = ["staticlib", "cdylib"]

[dependencies]
cranelift = "0"
cranelift-module = "0"
cranelift-object = "0"
paste = "1.0.11"
target-lexicon = "0.12"
libc = "0"
